[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "herio"
version = "0.1.0"
authors = [
  { name="Death Legion Team", email="contact@deathlegion.team" },
]
description = "A lightweight Python library for instant web UIs for your functions and ML models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "pydantic",
    "pyngrok",
]

[project.urls]
"Homepage" = "https://github.com/deathlegion/herio"
"Bug Tracker" = "https://github.com/deathlegion/herio/issues"
